--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c9af63">  <td>22/03/31 17:15:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Log4JLogging.setup()[pri:0, instance:Log4j.Log4JLogging@29215f06]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@384515747</td>   <td></td> </tr>
-<tr bgcolor="c9af63">  <td>22/03/31 17:15:32</td>   <td>8402</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Log4JLogging.tearDown()[pri:0, instance:Log4j.Log4JLogging@29215f06]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@384515747</td>   <td></td> </tr>
-<tr bgcolor="c9af63">  <td>22/03/31 17:15:29</td>   <td>5130</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Log4JLogging.testRegistration()[pri:0, instance:Log4j.Log4JLogging@29215f06]">testRegistration</td> 
-  <td>main@384515747</td>   <td></td> </tr>
+<tr bgcolor="f0f1be">  <td>22/04/01 12:35:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPagePFTest.loginTest()[pri:2, instance:PageObjectModel.LoginPagePFTest@7b227d8d]">loginTest</td> 
+  <td>main@1524960486</td>   <td></td> </tr>
+<tr bgcolor="f0f1be">  <td>22/04/01 12:35:18</td>   <td>-9142</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPagePFTest.setUp()[pri:0, instance:PageObjectModel.LoginPagePFTest@7b227d8d]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1524960486</td>   <td></td> </tr>
+<tr bgcolor="f0f1be">  <td>22/04/01 12:35:37</td>   <td>9552</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPagePFTest.tearDown()[pri:0, instance:PageObjectModel.LoginPagePFTest@7b227d8d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1524960486</td>   <td></td> </tr>
+<tr bgcolor="f0f1be">  <td>22/04/01 12:35:27</td>   <td>-48</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPagePFTest.verify_ImageTest()[pri:1, instance:PageObjectModel.LoginPagePFTest@7b227d8d]">verify_ImageTest</td> 
+  <td>main@1524960486</td>   <td></td> </tr>
 </table>
